--- a/app/src/main/res/layout/card_metadata.xml
+++ b/app/src/main/res/layout/card_metadata.xml
@@ -14,8 +14,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_marginEnd="@dimen/card_margin"
+            android:layout_marginStart="10dp"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -32,10 +32,10 @@
 
                 <TextView
                     android:id="@+id/usernameTextView"
-                    android:layout_marginStart="@dimen/card_margin"
-                    android:layout_below="@+id/domainTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/domainTextView"
+                    android:layout_marginStart="@dimen/card_margin"
                     android:layout_marginTop="5dp"
                     android:text="@string/username" />
 
@@ -44,111 +44,132 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/domainTextView"
+                    android:layout_marginStart="5dp"
                     android:layout_marginTop="5dp"
                     android:layout_toEndOf="@+id/usernameTextView"
-                    android:text="@string/placeholder_no_data" />
+                    android:text="@string/placeholder_no_data"
+                    android:textStyle="bold" />
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/card_margin"
                 android:layout_marginLeft="@dimen/card_margin"
-                android:layout_marginRight="@dimen/card_margin"
-                android:layout_marginBottom="@dimen/card_margin">
+                android:layout_marginRight="@dimen/card_margin">
+
+                <TextView
+                    android:id="@+id/characterTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/characterset" />
+
+                <TextView
+                    android:id="@+id/characterSet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_toEndOf="@+id/characterTextView"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/lengthTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/characterTextView"
                     android:text="@string/length" />
 
                 <TextView
                     android:id="@+id/length"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/lengthTextView" />
+                    android:layout_below="@+id/characterTextView"
+                    android:layout_marginStart="5dp"
+                    android:layout_toEndOf="@+id/lengthTextView"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/iterationTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/iteration"
-                    android:layout_below="@+id/lengthTextView"/>
+                    android:layout_below="@+id/lengthTextView"
+                    android:text="@string/iteration" />
 
                 <TextView
                     android:id="@+id/iteration"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/iterationTextView"
                     android:layout_below="@+id/lengthTextView"
-                     />
+                    android:layout_marginStart="5dp"
+                    android:layout_toEndOf="@+id/iterationTextView"
+                    android:textStyle="bold" />
 
-                <GridLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:columnCount="8"
-                    android:layout_below="@+id/iterationTextView"
-                    android:layout_alignParentStart="true">
+                <!--<GridLayout-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:columnCount="8"-->
+                <!--android:layout_below="@+id/iterationTextView"-->
+                <!--android:layout_alignParentStart="true">-->
 
-                    <TextView
-                        android:id="@+id/hasLettersLowHeadingTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/card_margin_grid"
-                        android:text="@string/letters_lower_abc" />
+                <!--<TextView-->
+                <!--android:id="@+id/hasLettersLowHeadingTextView"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_margin="@dimen/card_margin_grid"-->
+                <!--android:text="@string/letters_lower_abc" />-->
 
-                    <TextView
-                        android:id="@+id/hasLettersLowTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/card_margin_grid"
-                        android:layout_marginStart="4dp"
-                        android:text="@string/not_checked" />
+                <!--<TextView-->
+                <!--android:id="@+id/hasLettersLowTextView"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_margin="@dimen/card_margin_grid"-->
+                <!--android:layout_marginStart="4dp"-->
+                <!--android:text="@string/not_checked" />-->
 
-                    <TextView
-                        android:id="@+id/hasLettersUpHeadingTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/card_margin_grid"
-                        android:text="@string/letters_upper_abc" />
+                <!--<TextView-->
+                <!--android:id="@+id/hasLettersUpHeadingTextView"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_margin="@dimen/card_margin_grid"-->
+                <!--android:text="@string/letters_upper_abc" />-->
 
-                    <TextView
-                        android:id="@+id/hasLettersUpTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/card_margin_grid"
-                        android:text="@string/not_checked" />
+                <!--<TextView-->
+                <!--android:id="@+id/hasLettersUpTextView"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_margin="@dimen/card_margin_grid"-->
+                <!--android:text="@string/not_checked" />-->
 
 
-                    <TextView
-                        android:id="@+id/hasNumbersHeadingTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/card_margin_grid"
-                        android:text="@string/numbers_123" />
+                <!--<TextView-->
+                <!--android:id="@+id/hasNumbersHeadingTextView"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_margin="@dimen/card_margin_grid"-->
+                <!--android:text="@string/numbers_123" />-->
 
-                    <TextView
-                        android:id="@+id/hasNumbersTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/card_margin_grid"
-                        android:text="@string/not_checked" />
+                <!--<TextView-->
+                <!--android:id="@+id/hasNumbersTextView"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_margin="@dimen/card_margin_grid"-->
+                <!--android:text="@string/not_checked" />-->
 
-                    <TextView
-                        android:id="@+id/hasSymbolsHeadingTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/card_margin_grid"
-                        android:text="@string/Symbols" />
+                <!--<TextView-->
+                <!--android:id="@+id/hasSymbolsHeadingTextView"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_margin="@dimen/card_margin_grid"-->
+                <!--android:text="@string/Symbols" />-->
 
-                    <TextView
-                        android:id="@+id/hasSymbolsTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/card_margin_grid"
-                        android:text="@string/not_checked" />
+                <!--<TextView-->
+                <!--android:id="@+id/hasSymbolsTextView"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_margin="@dimen/card_margin_grid"-->
+                <!--android:text="@string/not_checked" />-->
 
-                </GridLayout>
+                <!--</GridLayout>-->
 
 
             </RelativeLayout>
