--- a/app/src/main/res/layout-sw600dp/activity_about.xml
+++ b/app/src/main/res/layout-sw600dp/activity_about.xml
@@ -44,14 +44,31 @@
             android:text="@string/app_name_long"
             android:textSize="@dimen/about_large" />
 
-        <TextView
-            android:id="@+id/textFieldVersion"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
-            android:text="@string/version_number"
-            android:textSize="@dimen/about_large" />
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/textFieldVersion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/version_number"
+                android:textSize="@dimen/about_large" />
+
+            <TextView
+                android:id="@+id/textFieldVersionName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="4dp"
+                android:layout_toEndOf="@+id/textFieldVersion"
+                android:textSize="@dimen/about_large" />
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/textFieldAuthor"
